# LegendaryBot

./: .gitignore  README.md  alembic.ini  bot.py  example_env.txt  level - Copy.db  main.py  pyproject.toml  requirements.txt
.github/workflows/: ltestconfig.yaml
alembic/: env.py
alembic/versions/: 02fe3ba48614_adding_bigint_to_more_rows_and_removing_.py  1a0ceda47814_add_youtube_notification_table.py  45b2f7297723_change_id_column_to_biginteger_for_.py  4c3a345681f5_alter_more_tables_to_bigints.py  e8101fbc5d12_add_unique_constraint_to_member_table.py
constants/: enums.py  wordle_emojies.py
dbmodels/: __init__.py  base.py  guild_models.py  models.py
modules/AutoDelete/: cog.py
modules/Autoroles/: cog.py
modules/GuildLogging/: cog.py
modules/GuildSetup/: cog.py
modules/GuildWelcome/: cog.py
modules/Help/: cog.py
modules/LevelSystem/: cog.py
modules/Linkedroles/: cog.py
modules/Messagefetcher/: cog.py
modules/Moderation/: cog.py
modules/Ping/: cog.py
modules/ServerInfo/: cog.py
modules/Slap/: cog.py
modules/StatusChanger/: cog.py
modules/TemporaryVoiceChannel/: cog.py
modules/WordleGame/: cog.py
modules/YoutubeNotification/: cog.py
tests/: conftest.py  test_LinkedRoles.py  test_dbmodels.py  test_embed_builder.py  test_enums.py  test_guild_channels.py  test_guildconfig_columns.py  test_wordle_logic.py
tests/json/: LinkedRoleTest.json  guildchanneltest.json
utils/: customwrappers.py  filepaths.py  guildjsonfunctions.py  jsonfunctions.py  settings.py
utils/Activity/: activity_helpers.py
utils/Wordle/: wordle.py
(+31 files in other folders)
