[tool.poetry]
name = "legendarybot"
version = "0.1.0"
description = "A small discord bot for better guild management"
authors = ["L3G3ND <carl.max@hotmail.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Example pytest configurations
minversion = "7.0"
addopts = "--strict-markers"
testpaths = [
    "tests"
    ]
pythonpath = [
    "."
]
filterwarnings = [
    "ignore::DeprecationWarning"
]